# TappsMCP

./: .dockerignore  .docsmcp.yaml  .envrc  .git-blame-ignore-revs  .gitignore  .hadolint.yaml  .mcp.json  .pre-commit-config.yaml  .ralphrc  .tapps-mcp.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.platform  README.md  SECURITY.md  TECH_STACK.md  addenda.md  docker-compose.dev.yml  docker-compose.yml  docsmcp.spec  llms-full.txt  llms.txt  pyproject.toml  tapps-mcp.spec  tapps_mcp.spec
.claude/: settings.json  settings.local.json  settings.local.json.example
.claude/agents/: ralph-coordinator.md  ralph.md  tapps-frontend-reviewer.md  tapps-researcher.md  tapps-review-fixer.md  tapps-reviewer.md  tapps-validator.md
.claude/hooks/: tapps-memory-auto-capture.sh  tapps-memory-auto-recall.sh  tapps-memory-capture.sh  tapps-post-docs-validate.sh  tapps-post-edit.sh  tapps-post-linear-list.sh  tapps-post-linear-snapshot-get.sh  tapps-post-report.sh  tapps-post-session-start.sh  tapps-post-validate.sh  tapps-pre-bash.sh  tapps-pre-compact.sh  tapps-pre-linear-list.sh  tapps-pre-linear-write.sh  tapps-pre-session-start-gate.sh  tapps-pre-tooluse.ps1  tapps-pre-tooluse.sh  tapps-session-compact.sh  tapps-session-end.sh  tapps-session-start.sh  tapps-stop.ps1  tapps-stop.sh  tapps-subagent-start.ps1  tapps-subagent-start.sh  tapps-subagent-stop.sh  tapps-task-completed.ps1  tapps-task-completed.sh  tapps-tool-failure.sh  tapps-user-prompt-submit.sh
.claude/rules/: autonomy.md  integration-hygiene.md  linear-standards.md  python-quality.md  repo-workflow.md  tapps-pipeline.md  test-quality.md
.cursor/: BUGBOT.md  hooks.json  mcp.json  mcp.json.example
.cursor/hooks/: tapps-after-edit.ps1  tapps-after-edit.sh  tapps-before-mcp.ps1  tapps-before-mcp.sh  tapps-mcp-zombie-cleanup.ps1  tapps-mcp-zombie-cleanup.sh  tapps-memory-auto-recall.ps1  tapps-memory-auto-recall.sh  tapps-stop.ps1  tapps-stop.sh
.cursor/rules/: tapps-pipeline.md  tapps-pipeline.mdc  tapps-python-quality.mdc
.githooks/: post-merge  pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/agents/: tapps-quality.md  tapps-researcher.md
.github/instructions/: quality.instructions.md  security.instructions.md  testing.instructions.md
.github/workflows/: agentic-pr-review.yml  agents-md-stamp.yml  brain-contract.yml  ci.yml  codeql-analysis.yml  copilot-setup-steps.yml  dependabot-auto-merge.yml  docker-publish.yml  docker.yml  docs-quality.yml  eval-descriptions.yml  hive-write-lint.yml  mcp-guardrails.yml  non-slow-tests.yml  publish.yml  tapps-quality-reusable.yml  tapps-quality.yml  tool-budget-lint.yml  tool-budget.yml  tool-descriptions.yml
.ralph/: .circuit_breaker_events  .circuit_breaker_state  .invocation_latencies  .last_reset  .loop_start_sha  .ralph_session  .ralph_session_history  .update_failures  AGENT.md  PROMPT.md  fix_plan.md  progress.json  status.json
.ralph/docs/: feature-request-fix-plan-epic-sync.md
.ralph/hooks/: on-stop.sh  on-subagent-done.sh  validate-command.sh
.tapps-mcp/metrics/: tool_calls_2026-02-10.jsonl
.tapps-mcp/sessions/: b837933f1c0d.json
deploy/systemd/: tapps-mcp-fleet.service
docker/: dev-entrypoint.sh
docker-mcp/: README.md  catalog.yaml  tapps-catalog.yaml  toolkit-catalog.yaml
docker-mcp/docs-mcp/: readme.md  server.yaml  tools.json
docker-mcp/examples/: tools-core-tier1-tier2.yaml  tools-core-tier1.yaml
docker-mcp/profiles/: tapps-core-tools.yaml  tapps-developer.yaml  tapps-frontend.yaml  tapps-full.yaml  tapps-minimal.yaml  tapps-planning.yaml  tapps-reviewer.yaml  tapps-standard-1100.yaml  tapps-standard-1110.yaml  tapps-standard-131.yaml  tapps-standard-141.yaml  tapps-standard-150.yaml  tapps-standard-160.yaml  tapps-standard-170.yaml  tapps-standard-180.yaml  tapps-standard-190.yaml  tapps-standard.yaml
docker-mcp/tapps-mcp/: readme.md  server.yaml  tools.json
docs/: 2026-CLAUDE-CONTROL-FILES-AUDIT.md  ARCHITECTURE.html  ARCHITECTURE.md  ARCHITECTURE_CACHE_AND_RAG.md  ARCHITECTURE_DOCUMENT_PLAN.md  ARCHITECTURE_REPORT.html  CALL_GRAPH.md  CHECKLIST.md  CLARITY_RECOMMENDATIONS.md  CLAUDE_FULL_ACCESS_SETUP.md  COMPOSITION_GUIDE.md  CONFIG_REFERENCE.md  COVERAGE_METRICS_IMPLEMENTATION_TASK.md  CRITICAL_HIGH_REVIEW_PLAN.md  CTX_PATTERN_REFERENCE.md  DOCKER_DEPLOYMENT.md  DOCKER_MCP_TOOLKIT.md  FEEDBACK_2026-04-06_agentforge-cleanup-session.md  FEEDBACK_ISSUES_PLAN.md  GITHUB_SETUP_GUIDE.md  IMPLEMENTATION_PLAN_CRITICAL_HIGH_MEDIUM.md  IMPROVEMENT-MAP-2026-07-01.md  INDEX.md  INIT_AND_UPGRADE_FEATURE_LIST.md  MCP_CLIENT_TIMEOUTS.md  MCP_COMPOSITION.md  MCP_YOUTUBE_SETUP.md  MEMORY_REFERENCE.md  MIGRATION_FROM_TAPPS_AGENTS.md  MODULE_MAP.md  ONBOARDING.md  POST_V2_ROADMAP_ASSESSMENT.md  PURPOSE.md  REVIEW_TRACKING.md  SELF_REVIEW_FINDINGS.md  SKILL_AUTHORING.md  SPRINT_BOARD.md  STYLE_GUIDE.md  TAP-967-measurement.md  TAPPS_BACKLOG_PLAN.md  (+9 more)
docs/adr/: 0001-in-process-agentbrain-via-brainbridge.md  0002-pin-tapps-brain-version-floor-at-372.md  0003-no-pypi-or-npm-publish-global-install-from-local-checkout.md  0004-deterministic-tools-only-contract.md  0005-mcp-server-zombie-cleanup-hook-on-session-start.md  0006-tapps-validate-changed-requires-explicit-file-paths.md  README.md  (+24 more)
examples/: combined_server.py  platform_cli.py
npm/: README.md  package.json
npm-docs-mcp/: README.md  package.json
reports/: __init__.py  _builder_ops.py  _deep_dive.py  suite_sections.py
scripts/: build-docsmcp-exe.ps1  build-exe.ps1  build_epic_stories.py  bump-versions.py  check-tool-budget.py  dev-release.sh  docs-quality-gate.py  fleet-upgrade.sh  generate-tools-json.py  install-git-hooks.sh  nlt-http-fleet.sh  prepush-smoke.sh  reap-orphan-mcp-serves.sh  run-regression.sh  run_docsmcp.py  run_tapps_mcp.py  tapps_mcp_console.py  test-docker-stdio.ps1  validate-cursor-plugin.sh  validate_epic15.py  verify_http_server.py
stories/: epic-86-zeek-telemetry-capture-health.md  tapps-memory-brain-architecture.md
tests/: conftest.py
(+968 files in other folders)
