[build-system]
requires = ["hatchling>=1.28,<2"]
build-backend = "hatchling.build"

[project]
name = "tapps-mcp"
version = "0.4.3"
description = "MCP server providing deterministic code quality tools for AI coding assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "TappsMCP Contributors" },
]
keywords = ["mcp", "code-quality", "linting", "security", "scoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.26.0,<2",
    "pydantic>=2.12.5,<3",
    "pydantic-settings>=2.13.1,<3",
    "structlog>=25.5.0,<26",
    "pyyaml>=6.0.3,<7",
    "click>=8.3.1,<9",
    "anyio>=4.12.1,<5",
    "httpx>=0.28.1,<1",
    "filelock>=3.24.3,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.0.0,<8",
    "pytest-timeout>=2.4.0,<3",
    "mypy>=1.19.1,<2",
    "ruff>=0.15.2,<1",
    "pre-commit>=4.5.1,<5",
    "types-PyYAML>=6.0.12",
    "playwright>=1.58.0,<2",
]
rag = [
    "faiss-cpu>=1.13.2,<2",
    "sentence-transformers>=5.2.3,<6",
    "numpy>=2.4.2,<3",
]
vector = [
    "faiss-cpu>=1.13.2,<2",
    "sentence-transformers>=5.2.3,<6",
    "numpy>=2.4.2,<3",
]
pip-audit = [
    "pip-audit>=2.7.0",
]

[project.scripts]
tapps-mcp = "tapps_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/tapps-mcp/tapps-mcp"
Repository = "https://github.com/tapps-mcp/tapps-mcp"
Documentation = "https://github.com/tapps-mcp/tapps-mcp#readme"
Issues = "https://github.com/tapps-mcp/tapps-mcp/issues"
Changelog = "https://github.com/tapps-mcp/tapps-mcp/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = ["src/tapps_mcp/"]

[tool.hatch.build.targets.wheel]
packages = ["src/tapps_mcp"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "S",    # flake8-bandit
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
    "ANN",  # flake8-annotations
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "PL",   # pylint
]
ignore = [
    "S603",    # subprocess call - check for execution of untrusted input (we handle this)
    "S607",    # starting a process with a partial executable path
    "PLC0415", # import not at top-level — we use lazy imports intentionally
    "PLR0913", # too many arguments — acceptable for config-heavy tool runners
    "PLR0912", # too many branches — acceptable for multi-tool dispatch
    "PLR0915", # too many statements — acceptable for composite tool handlers
]

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["T201", "PTH109"]
"tests/**/*.py" = ["S101", "S105", "S106", "S108", "ANN", "PLR2004", "TC001", "TC003", "RUF059", "B007"]
"src/tapps_mcp/metrics/**/*.py" = ["PLR2004"]
"scripts/**/*.py" = ["T201", "E501", "PLR2004", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["mcp", "mcp.*", "mcp.server.*", "mcp.server.fastmcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tapps_mcp.server"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["sentence_transformers", "sentence_transformers.*", "faiss", "numpy", "numpy.*", "radon", "radon.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 60
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow (subprocess-heavy, may be skipped with -m 'not slow')",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["tapps_mcp"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.0.0,<8",
    "mypy>=1.19.1,<2",
    "ruff>=0.15.2,<1",
    "types-PyYAML>=6.0.12",
]
